# med-xray-ssl

./: .gitignore  README.md  pyproject.toml  train.py  train_classification.py
src/configs/: rad-dino.yaml
src/configs/criterion/: binary.yaml
src/configs/dataloader/: default.yaml
src/configs/dataset/: binary.yaml
src/configs/metrics/: binary.yaml
src/configs/model/: rad_dino_linprobe.yaml
src/configs/optimizer/: default.yaml
src/configs/transforms/: default.yaml
src/configs/transforms/batch_transforms/: default.yaml
src/configs/transforms/instance_transforms/: default.yaml
src/configs/writer/: cometml.yaml  tensorboard.yaml  wandb.yaml
src/dataset/: base.py  binary.py  collate.py  utils.py
src/logger/: base.py  wandb.py
src/loss/: ce_loss.py
src/metrics/: accuracy.py  base.py  f1.py  recall.py  rocauc.py  tracker.py
src/model/: linprobe.py
src/trainer/: base.py  classification.py  trainer.py
src/transforms/: rad_dino.py
src/utils/: init.py  io.py  torch.py
