[project]
name = "med-xray-ssl"
version = "0.1.0"
description = "Fine-tuning pretrained SSL models on imbalanced chest X-rays for disease classification and detection"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "hydra-core==1.3.2",
    "ipykernel==7.0.1",
    "ipywidgets==8.1.7",
    "jupyter==1.1.1",
    "kagglehub==0.3.13",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "pre-commit==4.3.0",
    "pydantic==2.11.9",
    "ruff==0.14.2",
    "safetensors==0.6.2",
    "torch==2.9.0",
    "torchmetrics==1.8.2",
    "tqdm==4.67.1",
    "transformers==4.57.1",
    "wandb==0.22.2",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["src"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff]
line-length = 100
